# LearnParallel

./: .gitignore
GCRParallel/: .gitignore  A.txt  CMakeLists.txt  f.txt  main.cpp  readme.md
GCRParallel/include/: ParallelMatColMajor.hpp  ParallelVec.hpp  parallelMat.hpp
MatParallel/: CMakeLists.txt  main.cpp  main2.cpp
MatParallel/include/: parallelMat.hpp
async/: computePI.cpp  main  main.cpp  readme.md
computePIByOmp/: CMakeLists.txt  main.cpp  mainReduction.cpp  mainShare.cpp  mainVectored.cpp  readme.md
hw1/: readme.md
hw1/head/: matrix.hpp  timer.hpp
hw1/scr/: main  main.cpp
hw2/: computePI.cpp  main  main.cpp  readme.md
mpi/: main.cpp  readme.md
mpi1/: CMakeLists.txt  main.cpp
mpi2/: CMakeLists.txt  ComputePI.cpp  Possion1D.cpp  main.cpp  mainScatter.cpp  readme.md
omp/: 1.cpp  CMakeLists.txt  omp_test  readme.md  test.c
omp2/: CMakeLists.txt  main.cpp  readme.md
testEigen/: CMakeLists.txt  firstEigen  main.cpp  readme.md
testMatIO/: CMakeLists.txt  main.cpp  readme.md  test.cpp
