set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE RELEASE)

find_package(OpenMP REQUIRED)
# add_executable(computePI main.cpp)
# add_executable(computePI mainReduction.cpp)
add_executable(computePI mainShare.cpp)
# add_executable(computePI mainVectored.cpp)
target_link_libraries(computePI PUBLIC OpenMP::OpenMP_CXX)